# Denari

./: .gitignore  PROJECT_DATA_STORAGE.md  README.md  TESTING_PROJECT_SAVE.md  how 4e4ca4c --stat  package-lock.json
backend/: .gitignore  MIGRATION_TO_ARELLE.md  README.md  ford_note18_reconstructed.json  pyproject.toml  stuff_to_add.txt  test.py
backend/api/__init__.py/: main.py
backend/app/: main.py  test_sp500_prices.py
backend/app/core/: cache.py  config.py  database.py  logging.py  model_role_map.py  normalized_order.py  security.py
backend/app/data/: __init__.py  fmp_client.py  fmp_normalizer.py  fmp_stable_normalizer.py  sp500_latest_prices.json
backend/app/db/: alembic.ini
backend/app/metrics/: __init__.py  fmp_core_metrics.py  fmp_stable_metrics.py  ford_core_metrics.py
backend/app/models/: company.py  filing.py  job.py  model_snapshot.py  org.py  user.py  (+3 more)
backend/downloads/: Denari_Final.xlsx  Denari_Final_v2.xlsx  MSFT_assumptions.json  MSFT_balance_sheet_stable_raw.json  MSFT_cash_flow_stable_raw.json  MSFT_combined_fmp.json  MSFT_complete_model1.xlsx  MSFT_income_statement_stable_raw.json  MSFT_quote_stable_raw.json  main.py  project_1764846164376_MSFT.json
backend/outputs/: F_FY2024_single_year_llm_classified.json  F_multi_year_3years_llm_classified.json  ford_tag_validation_report.json
backend/scripts/: README.md  arelle_raw_dump_ford_2024.py  build_fmp_stable_normalized.py  build_ford_2024_structured_output.py  build_ford_fact_table.py  build_ford_fmp_normalized.py  build_ford_fmp_stable_normalized.py  classify_ford_2024_tags.py  compute_fmp_stable_metrics.py  compute_ford_fmp_stable_metrics.py  compute_ford_metrics.py  compute_ford_metrics_from_fmp.py  debug_arelle_ford_2024.py  download_ford_2024_ixbrl.py  fetch_fmp_company_profile.py  fetch_fmp_enterprise_value.py  fetch_fmp_industry_screener.py  fetch_fmp_stable_raw.py  fetch_fmp_stock_prices.py  fetch_fmp_tickers.py  fetch_ford_fmp_raw.py  fetch_ford_fmp_stable_raw.py  reconstruct_ford_balance_sheet.py  reconstruct_income_statement.py  tag_ford_fact_table.py  test_env_fmp_key.py  test_fact_enrichment_ford_2024.py  test_ford_income_statement_to_json.py
backend/tests/: ford_interest_bearing_debt_from_xbrl.py  reconstruct_note18_from_xbrl.py  test_arelle_debt_note_extractor.py  test_arelle_statement_extractor.py  test_debt_extractor.py  test_ford_interest_bearing_debt.py  test_xbrl_debt_extractor.py
(+176 files in other folders)
